--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-syntax-import-attributes": "^7.23.3",
     "@babel/preset-env": "^7.23.2",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "html-webpack-plugin": "^5.5.3",
