--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "date-fns": "^3.0.6",
     "hover.css": "^2.3.2",
-    "mini-css-extract-plugin": "^2.7.6"
+    "mini-css-extract-plugin": "^2.7.6",
+    "nodemailer": "^6.9.13"
   },
   "main": "webpack.config.js",
   "description": ""
